--- a/SpeechFrameWork/SpeechFrameWork/Info.plist
+++ b/SpeechFrameWork/SpeechFrameWork/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请求麦克风</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>请求语音识别</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
